# irchad_backend

./: .gitattributes  .gitignore  README.md  package-lock.json
assistance_service/: package-lock.json  package.json  tsconfig.json
assistance_service/prisma/: schema.prisma
assistance_service/src/: app.ts
auth_service/: package-lock.json  package.json  ts.config
auth_service/prisma/: schema.prisma
auth_service/scripts/: add-commercial-user.ts  fix-decider-user.ts  list-users.ts  seed.ts
auth_service/src/: app.ts
devices_service/: package-lock.json  package.json
devices_service/prisma/: schema.prisma
devices_service/scripts/: seed.ts
devices_service/src/: index.ts
env_service/: .gitignore  README.md  main.py  main.txt  pyproject.toml
env_service/app/: main.py
env_service/app/api/: routes.py
env_service/app/core/: config.py  db.py  models.py
env_service/app/models/: loader.py
env_service/app/schemas/: environement.py
env_service/app/services/: environement.py  prediction.py
maintenancier_service/: firebaseConfig.ts  key.json  package-lock.json  package.json
maintenancier_service/prisma/: schema.prisma  seed.ts  seedDummyData.js
maintenancier_service/src/: app.ts  index.ts
odb_service/: README.md  requirements.txt
odb_service/app/: .env.example  config.py  main.py  mqtt_client.py
stats_service/: .env  .env.example  .gitignore  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
stats_service/__test__/: sale.test.ts
stats_service/coverage/: index.html
(+93 files in other folders)
