[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "geojson>=3.2.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.7",
    "ultralytics>=8.3.112",
    "unicorn>=2.1.3",
    "uvicorn>=0.34.1",
]
